--- a/chat_server.BLL/chat_server.BLL.csproj
+++ b/chat_server.BLL/chat_server.BLL.csproj
@@ -40,12 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IClientObject.cs" />
+    <Compile Include="Contracts\IServerObject.cs" />
     <Compile Include="Implementations\ClientObject.cs" />
+    <Compile Include="Implementations\ServerObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
