--- a/tcp_server/tcp_server.csproj
+++ b/tcp_server/tcp_server.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\chat_server.BLL\chat_server.BLL.csproj">
+      <Project>{406ff436-0f1d-42e0-9445-178355a08ebf}</Project>
+      <Name>chat_server.BLL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
