--- a/tank_game.Model/tank_game.Model.csproj
+++ b/tank_game.Model/tank_game.Model.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{406FF436-0F1D-42E0-9445-178355A08EBF}</ProjectGuid>
+    <ProjectGuid>{AEC65C10-AA73-4E53-8926-8BA7E5D5EDDB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>chat_server.BLL</RootNamespace>
-    <AssemblyName>chat_server.BLL</AssemblyName>
+    <RootNamespace>tank_game.Model</RootNamespace>
+    <AssemblyName>tank_game.Model</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,18 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IClientObject.cs" />
-    <Compile Include="Contracts\IServerObject.cs" />
-    <Compile Include="Implementations\ClientObject.cs" />
-    <Compile Include="Implementations\ServerObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Room.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\tank_game.Model\tank_game.Model.csproj">
-      <Project>{AEC65C10-AA73-4E53-8926-8BA7E5D5EDDB}</Project>
-      <Name>tank_game.Model</Name>
-    </ProjectReference>
+    <Compile Include="TnakInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
